<resources>
    <string name="app_name">College</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="active">Active</string>
    <string name="id">ID</string>
    <string name="home">Go to Home</string>
    <string name="label">Android Team(CCT)</string>
    <string name="detail">Detail Page</string>
</resources>